# flet-app

./: README.md  counter.py  pyproject.toml
src/flet_app/: __init__.py
